# project2/swagger.json
@@ -5,19 +5,46 @@
     "description": "This API provide the information about the products in the store and their details.",
     "version": "1.0.0"
   },
-  "host": "project2-sy4v.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
       "get": {
-        "tags": ["Hello Project2"],
-        "description": "Root endpoint. Can be used to verify that the API is running.",
+        "tags": [
+          "Home"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "login",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "logout",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "API is working"
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": [
+          "Logout"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -31,6 +58,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -46,17 +76,24 @@
           {
             "name": "body",
             "in": "body",
-            "required": true,
-            "description": "Product information.",
             "schema": {
               "type": "object",
-              "required": ["name", "category", "price", "stock", "description"],
               "properties": {
-                "name": { "type": "string", "example": "Wallet" },
-                "category": { "type": "string", "example": "Accessories" },
-                "price": { "type": "string", "example": "120" },
-                "stock": { "type": "string", "example": "3" },
-                "description": { "type": "string", "example": "Elegant wallet Paco Ran designer" }
+                "name": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "stock": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                }
               }
             }
           }
@@ -85,8 +122,7 @@
             "name": "category",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Category name"
+            "type": "string"
           }
         ],
         "responses": {
@@ -116,8 +152,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "product ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -145,22 +180,29 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Product ID"
+            "type": "string"
           },
           {
             "name": "body",
             "in": "body",
-            "description": "Updated product data",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "name": { "type": "string", "example": "Updated Wallet" },
-                "category": { "type": "string", "example": "Accessories" },
-                "price": { "type": "string", "example": "150" },
-                "stock": { "type": "string", "example": "5" },
-                "description": { "type": "string", "example": "Updated description for the wallet" }
+                "name": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                },
+                "category": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "stock": {
+                  "example": "any"
+                }
               }
             }
           }
@@ -190,8 +232,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Product ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -229,22 +270,29 @@
         "tags": [
           "Users"
         ],
-        "description": "Creates a new user in the database.",
+        "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
-            "required": true,
-            "description": "User object to create.",
             "schema": {
               "type": "object",
-              "required": ["firstName", "lastName", "email", "favoriteColor", "birthdate"],
               "properties": {
-                "firstName": { "type": "string", "example": "John" },
-                "lastName": { "type": "string", "example": "Doe" },
-                "email": { "type": "string", "example": "john.doe@example.com" },
-                "favoriteColor": { "type": "string", "example": "Blue" },
-                "birthdate": { "type": "string", "example": "1990-01-01" }
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "favoriteColor": {
+                  "example": "any"
+                },
+                "birthdate": {
+                  "example": "any"
+                }
               }
             }
           }
@@ -295,7 +343,7 @@
         "tags": [
           "Users"
         ],
-        "description": "Update user by ID",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -310,19 +358,19 @@
               "type": "object",
               "properties": {
                 "firstName": {
-                  "example": "John"
+                  "example": "any"
                 },
                 "lastName": {
-                  "example": "Doe"
+                  "example": "any"
                 },
                 "email": {
-                  "example": "john.doe@example.com"
+                  "example": "any"
                 },
                 "favoriteColor": {
-                  "example": "Blue"
+                  "example": "any"
                 },
                 "birthdate": {
-                  "example": "1990-01-01"
+                  "example": "any"
                 }
               }
             }
